German/Lenguajes y compiladores/Lab3/tests/bad/bad09.imp
data Bool = True | False
data N = O | S <N>

method suma (n : N, b : Bool) returns (r : N)
{
    -- undefined function
    r := not(b)
} 
